--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -581,7 +581,10 @@ body {
 }
 
 .m-preview-content-box {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 3;
   width: 310px;
   max-width: 85%;
